# reduced_food_web_app

./: .gitignore  README.md  main.py  pyproject.toml
static/css/: main.css
static/js/: main.js
templates/: base.html  index.html
