[project]
name = "reduced-food-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.3",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests==2.32.3",
]
